<resources>
    <string name="Detail_Info">Detail info</string>
    <string name="Report_wrong_city_name_text">Report wrong city name</string>
    <string name="a_new_version_is_available">New version available. Update now?</string>
    <string name="abbrev_wday_day_month_no_year">E, d MMMM</string>
    <string name="abbrev_wday_month_day_no_year">E, MMMM d</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_weather">About Weather</string>
    <string name="accu_logo">Accuweather.com</string>
    <string name="action_bar_title">Weather</string>
    <string name="action_bar_title_theme_position">Select place</string>
    <string name="action_bar_title_theme_state">Select regions</string>
    <string name="ad_mob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_mob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ad_mob_reward_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="add_city_message">Tap here to add a city</string>
    <string name="add_city_message_edge_panel">Tap to get the weather</string>
    <string name="add_city_message_tts">Double tap to add.</string>
    <string name="add_current_location">Add current location</string>
    <string name="add_icon">Add %s icon</string>
    <string name="add_icon_to_app_list">Add icon to app list</string>
    <string name="add_location">Add location</string>
    <string name="add_something">Add %s</string>
    <string name="add_to_home_screen">Add %s to Home screen</string>
    <string name="add_to_your_home_and_apps_screen">Add %s to your Home and Apps screens.</string>
    <string name="add_to_your_home_screen">Add %s to your Home screens.</string>
    <string name="add_weather_to_the_apps_screen">Add %s to the Apps screen.</string>
    <string name="add_weather_to_the_home_screen">Add %s to the Home screen.</string>
    <string name="added_to_app_screen">%s added to Apps screen.</string>
    <string name="added_to_home_screen">%s added to Home screen.</string>
    <string name="ads_settings_ads">Ads</string>
    <string name="ads_settings_privacy_notice">Ads Privacy Notice</string>
    <string name="ads_settings_privacy_settings">Ads Privacy Settings</string>
    <string name="after_you_agree_to_all_of_the_above">After you agree to all of the above, this message will not be shown again.</string>
    <string name="agree_to_all">Agree to all</string>
    <string name="agree_txt">Agree</string>
    <string name="air_quality">Air Quality</string>
    <string name="air_quality_next_tts">Later daily air quality forecasts</string>
    <string name="air_quality_previous_tts">Earlier daily air quality forecasts</string>
    <string name="alert_title">Severe weather alert</string>
    <string name="all_added_cities">All added cities</string>
    <string name="allow">Allow</string>
    <string name="allow_permission_in_settings">To use this feature, you need to allow permission in Settings.</string>
    <string name="allow_to_access_the_following_data">Allow %s to access the following data:</string>
    <string name="already_registered_message">Location already added.</string>
    <string name="alter_popup_search_menu">Enter a location name.</string>
    <string name="always_agree">Always Agree</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_info">App info</string>
    <string name="app_name">DiagMonSA</string>
    <string name="app_process_name">:com.samsung.android.weather</string>
    <string name="app_update_dialog_message">A new version of %s is available</string>
    <string name="app_update_dialog_title">A new version of %s is available.</string>
    <string name="app_will_use_location_msg">"The Weather app will use your location to get the local weather and may share local weather information with other apps so they can display it. To provide refreshed weather info, the Weather app will process your location regularly, even when you're not using Weather or any other app that shows weather information. You can use the Weather app even if this is off."</string>
    <string name="app_will_use_location_share_local_weather_info_msg">"The Weather app will use your location to get the local weather and may share local weather information with other apps so they can display it. To provide refreshed weather info, the Weather app will process your location regularly, even when you're not using Weather or any other app that shows weather information. You can use the Weather app even if this is off. You can turn this off in Weather app settings."</string>
    <string name="appbar_base_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_not_support_restricted">Action not supported.</string>
    <string name="apply_daylight_saving_time">Apply daylight saving time?</string>
    <string name="aqi_title">AQI</string>
    <string name="as_possible_after_verification">Report sent. City name will be changed as soon as possible after verification.</string>
    <string name="auto_refresh_on_screen_description">"Get refreshed weather info every hour automatically. When this is on, you can't refresh manually."</string>
    <string name="auto_refresh_on_the_go">Auto refresh on the go</string>
    <string name="auto_refresh_on_the_go_advanced">Advanced</string>
    <string name="auto_refresh_on_the_go_description">"Get more frequent weather updates when you're driving, biking, running, or walking. When this is on, you can't refresh manually."</string>
    <string name="auto_refresh_on_the_go_simple_description">"Get more frequent weather updates when you're driving, biking, running, or walking."</string>
    <string name="away_mode_dialog_content">"We've connected you to a data provider in your current country or region. The names of some locations may be different."</string>
    <string name="away_mode_dialog_title">Weather data provider updated</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_report">Report</string>
    <string name="button_finish">Finish</string>
    <string name="button_tts">Button</string>
    <string name="cancel_tts">Cancel</string>
    <string name="centigrade">°C</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checkdeteal_tts">Double tap for more information.</string>
    <string name="china">China</string>
    <string name="cities_button">Cities</string>
    <string name="city_added">City added.</string>
    <string name="city_list_text">Cities</string>
    <string name="clear">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clear_then_cloudy">Clear then cloudy</string>
    <string name="clear_then_heavy_rain">Clear then heavy rain</string>
    <string name="clear_then_occasional_snow_showers">Clear then occasional snow showers</string>
    <string name="clear_then_rain">Clear then rain</string>
    <string name="clear_with_occasional_heavy_showers">Clear with occasional heavy showers</string>
    <string name="clear_with_occasional_showers">Clear with occasional showers</string>
    <string name="clear_with_occasional_snow_showers">Clear with occasional snow showers</string>
    <string name="close">Close</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="cloud_followed_by_snow">Cloud followed by snow</string>
    <string name="clouds_followed_by_heavy_rain">Clouds followed by heavy rain</string>
    <string name="clouds_followed_by_rain">Clouds followed by rain</string>
    <string name="cloudy">Cloudy</string>
    <string name="cloudy_followed_by_intense_heat">Cloudy followed by intense heat</string>
    <string name="cloudy_then_clearing">Cloudy then clearing</string>
    <string name="cloudy_with_hot_spells">Cloudy with hot spells</string>
    <string name="cloudy_with_scattered_heavy_rain">Cloudy with scattered heavy rain</string>
    <string name="cloudy_with_scattered_rain">Cloudy with scattered rain</string>
    <string name="cloudy_with_scattered_snow">Cloudy with scattered snow</string>
    <string name="cloudy_with_sunny_intervals">Cloudy with sunny intervals</string>
    <string name="cma_logo">China Meteorological Administration</string>
    <string name="cmp_domain_id">2f0b3cb6-979c-41f9-b20a-3d3c5ee07d84</string>
    <string name="cog_more_detail">More Detail</string>
    <string name="cog_more_info_to_web">More Info to Web</string>
    <string name="collapsed">Collapsed</string>
    <string name="font_sec">sec</string>
    <string name="menu_search_title">Search</string>
    <string name="message_no_search_result_z">No results found.</string>
    <string name="searching_ing">Searching…</string>
    <string name="view_list">View list</string>
    <string name="view_map">View map</string>
    <string name="widget_setting_background_color">Background color</string>
    <string name="widget_setting_black">Black</string>
    <string name="widget_setting_dark_mode_disable_warning">"Can't use Dark mode while using a theme."</string>
    <string name="widget_setting_night_mode_title">Match with Dark mode</string>
    <string name="widget_setting_white">White</string>
    <string name="widget_settings_change">Change</string>
</resources>