<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/text_search_fragment_0" android:background="@drawable/common_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:theme="@style/Weather.Style.Toolbar" android:id="@id/search_toolbar" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" app:layout_constraintTop_toTopOf="parent" app:title="@string/menu_search_title" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/search_content_layout" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/search_actionbar_search_view_margin_bottom" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/search_toolbar" app:layout_constraintVertical_weight="1.0">
        <ScrollView android:id="@id/scroll_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/progress_layout" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                    <TextView android:textAppearance="?android:textAppearance" android:textSize="15.0sp" android:textColor="@color/col_search_loading_text_color" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/searching_ing" android:fontFamily="@string/font_sec" />
                    <androidx.appcompat.widget.SeslProgressBar android:layout_gravity="center_horizontal" android:id="@id/progress" android:drawingCacheQuality="high" android:duplicateParentState="true" android:layout_width="60.0dip" android:layout_height="60.0dip" android:indeterminate="true" android:indeterminateOnly="true" android:indeterminateBehavior="repeat" android:autoStart="true" style="?android:progressBarStyleLarge" />
                </LinearLayout>
                <TextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/search_notice_text_size" android:textColor="@color/col_search_msg_text_color" android:gravity="center_horizontal" android:id="@id/default_text" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alter_popup_search_menu" android:fontFamily="@string/font_sec" android:translationZ="-1.0dip" android:layout_marginHorizontal="30.0dip" android:layout_marginVertical="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/current_location_button" />
                <TextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/search_notice_text_size" android:textColor="@color/col_search_msg_text_color" android:gravity="center" android:id="@id/no_result" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message_no_search_result_z" android:fontFamily="@string/font_sec" android:layout_marginHorizontal="30.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textAppearance="?android:textAppearanceListItem" android:textColor="?android:textColorPrimary" android:ellipsize="end" android:id="@id/current_location_button" android:background="@drawable/search_add_current_button_ripple" android:paddingTop="@dimen/list_padding_top_bottom" android:paddingBottom="@dimen/list_padding_top_bottom" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeightSmall" android:text="@string/add_current_location" android:lines="1" android:paddingStart="?android:listPreferredItemPaddingStart" android:paddingEnd="?android:listPreferredItemPaddingEnd" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <androidx.recyclerview.widget.RecyclerView android:id="@id/result_list" android:background="@drawable/common_contents_bg" android:focusable="false" android:visibility="gone" android:scrollbars="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/list_margin_bottom" android:drawSelectorOnTop="false" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constrainedHeight="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>