<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/container" android:tag="layout/map_fragment_0" android:background="@color/col_common_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:map="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:theme="@style/Weather.Style.Toolbar" android:id="@id/map_toolbar" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize" map:contentInsetStart="0.0dip" map:layout_constraintTop_toTopOf="parent" map:title="@string/menu_search_title" />
    <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@id/theme_region_list" android:visibility="gone" android:clipToPadding="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:paddingHorizontal="20.0dip" map:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/map_toolbar" />
    <com.google.android.gms.maps.MapView android:id="@id/map_view" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="12.0dip" map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/theme_region_list" map:mapType="normal" map:uiCompass="false" map:uiRotateGestures="false" map:uiScrollGestures="true" map:uiTiltGestures="false" map:uiZoomGestures="true" />
    <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@id/theme_category_list" android:visibility="gone" android:clipToPadding="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:paddingHorizontal="20.0dip" android:paddingVertical="13.0dip" map:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toTopOf="@id/map_view" />
    <TextView android:textSize="17.0sp" android:textColor="@color/weather_color_primary" android:id="@id/list_view_button" android:background="@drawable/map_button_bg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/view_list" android:fontFamily="@string/font_sec" android:layout_marginEnd="24.0dip" android:elevation="4.0dip" android:paddingHorizontal="16.0dip" android:paddingVertical="10.0dip" android:textFontWeight="600" map:layout_constraintBottom_toTopOf="@id/info_pager" map:layout_constraintEnd_toEndOf="parent" />
    <androidx.viewpager2.widget.ViewPager2 android:id="@id/info_pager" android:paddingBottom="20.0dip" android:clipChildren="false" android:clipToPadding="false" android:layout_width="0.0dip" android:layout_height="wrap_content" map:layout_constrainedHeight="true" map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/theme_category_list" map:layout_constraintVertical_bias="1.0" />
    <androidx.recyclerview.widget.RecyclerView android:orientation="vertical" android:id="@id/theme_place_list" android:background="@drawable/common_contents_bg" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" map:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toTopOf="@id/map_view" />
    <TextView android:textSize="17.0sp" android:textColor="@color/weather_color_primary" android:id="@id/map_view_button" android:background="@drawable/map_button_bg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/view_map" android:fontFamily="@string/font_sec" android:layout_marginEnd="24.0dip" android:elevation="4.0dip" android:paddingHorizontal="16.0dip" android:paddingVertical="10.0dip" android:textFontWeight="600" map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toEndOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/search_result_container" android:background="@drawable/common_bg" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toBottomOf="@id/map_toolbar">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/search_result_list" android:background="@drawable/common_contents_bg" android:layout_width="0.0dip" android:layout_height="wrap_content" map:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" map:layout_constrainedHeight="true" map:layout_constraintBottom_toBottomOf="parent" map:layout_constraintEnd_toEndOf="parent" map:layout_constraintStart_toStartOf="parent" map:layout_constraintTop_toTopOf="parent" map:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>