<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/widget_setting_controller_layout" android:tag="layout/widget_setting_controller_mvi_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/widget_setting_container_rounded_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/setting_location_height" android:paddingStart="@dimen/setting_controller_start_margin" android:paddingEnd="@dimen/setting_controller_end_margin" android:paddingVertical="@dimen/setting_text_padding_top_bottom">
        <TextView android:textSize="@dimen/setting_location_text_size" android:textColor="@drawable/widget_setting_text_color" android:gravity="center_vertical" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lines="1" android:textDirection="locale" style="@style/WidgetSetting.TextAppearance" />
        <TextView android:textSize="@dimen/setting_location_text_size" android:textColor="@drawable/widget_setting_text_color" android:ellipsize="end" android:gravity="center_vertical" android:tag="binding_2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:lines="1" android:layout_weight="1.0" android:textDirection="locale" style="@style/WidgetSetting.TextAppearance" />
        <Button android:textSize="@dimen/setting_location_settings_text_size" android:textColor="@color/widget_setting_change_button_text_color" android:gravity="center" android:layout_gravity="end|center" android:tag="binding_3" android:background="@drawable/widget_setting_button_ripple" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_settings_change" android:layout_marginStart="@dimen/setting_change_button_start_margin" android:paddingHorizontal="@dimen/setting_change_button_padding_start_end" style="@style/WidgetSetting.TextAppearance.title" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/setting_bg_color_bottom_margin">
        <TextView android:textSize="@dimen/setting_sub_header_text_size" android:textColor="@color/widget_setting_sub_header_text_color" android:id="@id/widget_setting_radio_label" android:paddingTop="@dimen/setting_sub_header_top_padding" android:paddingBottom="@dimen/setting_sub_header_bottom_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/setting_sub_header_height" android:text="@string/widget_setting_background_color" android:includeFontPadding="false" android:paddingStart="@dimen/setting_controller_start_margin" android:paddingEnd="@dimen/setting_controller_end_margin" style="@style/WidgetSetting.TextAppearance.title" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/widget_setting_container_rounded_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/setting_controller_radio_margin">
            <RadioGroup android:orientation="vertical" android:id="@id/widget_setting_theme_radio_group" android:tag="binding_4" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RadioButton android:textSize="@dimen/setting_radio_button_text_size" android:textColor="@drawable/widget_setting_text_color" android:id="@id/widget_setting_theme_white" android:tag="binding_5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/setting_radio_button_height" android:text="@string/widget_setting_white" android:paddingStart="@dimen/setting_radio_button_padding_start" android:paddingEnd="@dimen/setting_radio_button_padding_end" android:paddingVertical="@dimen/setting_text_padding_top_bottom" style="@style/WidgetSetting.TextAppearance" />
                <View android:background="@color/col_def_list_divider_color" android:layout_width="fill_parent" android:layout_height="@dimen/setting_background_color_divider_height" android:layout_marginStart="@dimen/setting_background_color_divider_margin_start" />
                <RadioButton android:textSize="@dimen/setting_radio_button_text_size" android:textColor="@drawable/widget_setting_text_color" android:id="@id/widget_setting_theme_black" android:tag="binding_6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/setting_radio_button_height" android:text="@string/widget_setting_black" android:paddingStart="@dimen/setting_radio_button_padding_start" android:paddingEnd="@dimen/setting_radio_button_padding_end" android:paddingVertical="@dimen/setting_text_padding_top_bottom" style="@style/WidgetSetting.TextAppearance" />
            </RadioGroup>
            <View android:background="@color/col_def_list_divider_color" android:layout_width="fill_parent" android:layout_height="@dimen/setting_background_color_divider_height" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingVertical="@dimen/setting_seek_bar_padding_top_bottom">
                <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/setting_seek_bar_label_margin_end">
                    <TextView android:textSize="@dimen/setting_seek_bar_ratio_text_size" android:textColor="@drawable/widget_setting_text_color" android:gravity="center" android:layout_gravity="center" android:id="@id/widget_setting_seek_bar_ratio" android:tag="binding_7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/setting_seek_bar_ratio_min_width" android:minHeight="@dimen/setting_sub_header_height" android:textAlignment="center" style="@style/WidgetSetting.TextAppearance" />
                    <TextView android:textSize="@dimen/setting_seek_bar_ratio_text_size" android:gravity="center" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/setting_seek_bar_ratio_min_width" android:minHeight="@dimen/setting_sub_header_height" android:text="100%" android:textAlignment="center" style="@style/WidgetSetting.TextAppearance" />
                </FrameLayout>
                <FrameLayout android:clipChildren="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <FrameLayout android:background="@drawable/widget_setting_seek_bar_background" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginHorizontal="10.0dip" />
                    <SeekBar android:id="@id/widget_setting_seek_bar" android:tag="binding_8" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:max="10" android:progressDrawable="@drawable/widget_setting_seek_bar_progress" android:minHeight="@dimen/setting_seek_bar_min_height" android:thumb="@drawable/widget_setting_seekbar_controller" android:paddingStart="0.0dip" android:paddingEnd="0.0dip" android:layout_marginStart="17.0dip" android:layout_marginEnd="17.0dip" android:labelFor="@id/widget_setting_seek_bar_ratio" android:tickMark="@drawable/widget_setting_seek_bar_tick_mark" android:min="0" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/widget_setting_night_mode_layout" android:tag="binding_9" android:background="@drawable/widget_setting_container_rounded_bg" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/setting_go_to_dark_height" android:paddingStart="@dimen/setting_controller_start_margin" android:paddingEnd="@dimen/setting_controller_end_margin" android:paddingVertical="@dimen/setting_text_padding_top_bottom">
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/setting_go_to_dark_title_text_size" android:textColor="@drawable/widget_setting_text_color" android:tag="binding_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_setting_night_mode_title" style="@style/WidgetSetting.TextAppearance" />
            <TextView android:textSize="@dimen/setting_go_to_dark_summary_text_size" android:textColor="@drawable/widget_setting_sub_text_color" android:tag="binding_11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_setting_dark_mode_disable_warning" style="@style/WidgetSetting.TextAppearance" />
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat android:id="@id/night_mode_switch_view" android:tag="binding_12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/setting_go_to_dark_switch_min_width" />
    </LinearLayout>
</LinearLayout>